--- a/index.html
+++ b/index.html
@@ -10,6 +10,40 @@
 
 <body>
 
+<div class = "description">
+	<p> through a monocle <br>
+		you cut the same blade of grass <br>
+		til it cuts itself. <br>
+		<br>
+		i am not moving. <br> 
+		i smell like poop on the outside. <br>
+		<br>
+		frozen in two-ply compliance forced focused difiantly exploring free
+		authenticity creating eccentric surroundings centered people using 
+		words like cheap teared the heart fabric touching the world amply
+		discourages mending all for not spending and lost the meaning of 
+		generosity in documented updates like everything gets updated outdated
+		sour breads trashed for store bought croutons no coupon fouton the way
+		the back bends back for anyone in heating distance bio-warmth radiators
+		microwaving the inner most thoughts giving lift like hairspray eyes 
+		glued to the scene like a weeb to the Japanese dream on the screen
+		meaning eighteen percent of the things said. <br>
+		<br>
+		picking cloves blindly get a handful of luckly ones <br>
+		understand statistics and the body does need a nanny or a summer camp <br>
+		while a mind is away at work working this problem in a heart <br>
+		smell the stairwell to their apartment <br>
+		swear to hear the flip flop on a wet balcony nana squeegeed dry <br>
+		while watching spaghetti family and sipping milo <br>
+		operating at the epitomy of happy existing there personified vitals <br>
+		aspire for jidu's shoe horn patience dripping water pellet poops and a bidet <br>
+		what can be said of a people who neglect to wash their ass <br>
+		memories flood back fast in fact cigarettes and gas <br>
+		carved each neuropath. <br><br>
+		</p>
+
+</div>
+
 <div class="vl"></div>
 <div class="vl2"></div>
 <div class="vl3"></div>
