--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
 <div class = "description">
-	<p> through a monocle <br>
-		you cut the same blade of grass <br>
-		til it cuts itself. <br>
+	<p> through a monocle					through a monocle					through a monocle<br>
+		a perfect understanding				a perfect understanding				a perfect understanding <br>
+		i am not moving						i am not moving						i am not moving <br> 
 		<br>
-		i am not moving. <br> 
-		</p>
+
+	</p>
 
 </div>
 
