--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
 <body>
 
 <div class = "description">
-	<p> through a monocle					through a monocle					through a monocle<br>
-		a perfect understanding				a perfect understanding				a perfect understanding <br>
-		i am not moving						i am not moving						i am not moving <br> 
+	<p> through a monocle through a monocle	through a monocle through a monocle through a monocle through a monocle <br>
+		a perfect understanding	a perfect understanding	a perfect understanding a perfect understanding a perfect understanding <br>
+		i am not moving	i am not moving	i am not moving i am not moving i am not moving i am not moving i am not moving <br> 
 		<br>
-
+		exploring free authenticity exploring free authenticity exploring free authenticity exploring free authenticity <br> 
+		eccentric aurroundings centered people eccentric aurroundings centered people eccentric aurroundings centered people <br>
+		store bought croutons no coupon store bought croutons no coupon store bought croutons no coupon store bought croutons no coupon <br>
+		fouton the way the back bends back fouton the way the back bends back fouton the way the back bends back fouton the way the back bends back<br>
+		microwaving the inner most microwaving the inner most microwaving the inner most microwaving the inner most microwaving the inner most <br>
+		give them lift like hairspray give them lift like hairspray give them lift like hairspray give them lift like hairspray <br>
+		eyes glue to the scene eyes glue to the scene eyes glue to the scene eyes glue to the scene eyes glue to the scene <br>
+		<br>
+		words like cheap lost its meaning words like cheap lost its meaning words like cheap lost its meaning words like cheap lost its meaning<br>
+		<br>
+		- Big Head Roarke, Eli Manning <br>
+		<br>
 	</p>
 
 </div>
