--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
 
 <div class = "description">
-	<p> through a monocle through a monocle	through a monocle through a monocle through a monocle through a monocle <br>
-		a perfect understanding	a perfect understanding	a perfect understanding a perfect understanding a perfect understanding <br>
-		i am not moving	i am not moving	i am not moving i am not moving i am not moving i am not moving i am not moving <br> 
+	<p> through a monocle-through a monocle-through a monocle-through a monocle-through a monocle-through a monocle-through a monocle-through a<br>
+		a perfect understanding-a perfect understanding-a perfect understanding-a perfect understanding-a perfect understanding-a perfect under<br>
+		i am not moving-i am not moving-i am not moving-i am not moving-i am not moving-i am not moving-i am not moving-i am not moving-i am no<br> 
 		<br>
-		exploring free authenticity exploring free authenticity exploring free authenticity exploring free authenticity <br> 
-		eccentric aurroundings centered people eccentric aurroundings centered people eccentric aurroundings centered people <br>
-		store bought croutons no coupon store bought croutons no coupon store bought croutons no coupon store bought croutons no coupon <br>
-		fouton the way the back bends back fouton the way the back bends back fouton the way the back bends back fouton the way the back bends back<br>
-		microwaving the inner most microwaving the inner most microwaving the inner most microwaving the inner most microwaving the inner most <br>
-		give them lift like hairspray give them lift like hairspray give them lift like hairspray give them lift like hairspray <br>
-		eyes glue to the scene eyes glue to the scene eyes glue to the scene eyes glue to the scene eyes glue to the scene <br>
+		exploring free authenticity-exploring free authenticity-exploring free authenticity-exploring free authenticity-exploring free authenti<br> 
+		eccentric surroundings centered people-eccentric surroundings centered people-eccentric surroundings centered people-eccentric surround<br>
+		store bought croutons no coupon-store bought croutons no coupon-store bought croutons no coupon-store bought croutons no coupon-store b<br>
+		fouton the way the back bends back-fouton the way the back bends back-fouton the way the back bends back-fouton the way the back bends <br>
+		microwaving the inner most-microwaving the inner most-microwaving the inner most-microwaving the inner most-microwaving the inner most <br>
+		give them lift like hairspray-give them lift like hairspray-give them lift like hairspray-give them lift like hairspray-give them lift <br>
+		eyes glue to the scene-eyes glue to the scene-eyes glue to the scene-eyes glue to the scene-eyes glue to the scene-eyes glue to the sce<br>
 		<br>
-		words like cheap lost its meaning words like cheap lost its meaning words like cheap lost its meaning words like cheap lost its meaning<br>
+		words like cheap lost its meaning-words like cheap lost its meaning-words like cheap lost its meaning-words like cheap lost its meaning<br>
 		<br>
 		- Big Head Roarke, Eli Manning <br>
 		<br>
