--- a/index.html
+++ b/index.html
@@ -15,17 +15,38 @@
 		a perfect understanding<br>
 		i am not moving<br> 
 		<br>
-		exploring free authenticity<br> 
-		eccentric surroundings centered people<br>
+		authenticity<br> 
 		store bought croutons no coupon<br>
-		fouton the way the back bends back<br>
-		microwaving the inner most<br>
-		give them lift like hairspray<br>
+		fouton way back bends <br>
+		<br>
 		eyes glue to the scene<br>
+		microwaving inner most<br>
+		words like cheap lost use<br>
 		<br>
-		words like cheap lost its meaning<br>
+		a loud man asking <br>
+		Big Head Roarke, Eli Manning <br>
+		stand for something die<br>
 		<br>
-		- Big Head Roarke, Eli Manning <br>
+		for nothing
+		<br>
+		<br>
+		through a monocle<br>
+		a perfect understanding<br>
+		i am not moving<br> 
+		<br>
+		authenticity<br> 
+		store bought croutons no coupon<br>
+		fouton way back bends <br>
+		<br>
+		eyes glue to the scene<br>
+		microwaving inner most<br>
+		words like cheap lost use<br>
+		<br>
+		a loud man asking <br>
+		Big Head Roarke, Eli Manning <br>
+		die for something stand<br>
+		<br>
+		for nothing
 		<br>
 	</p>
 
