--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
 <div class="vl"></div>
 <div class="vl2"></div>
 <div class="vl3"></div>
-
-<!--
-<div class="container"> 
-	<input type="text" placeholder="Enter"> 
-</div> 
--->
+<div class="vl4"></div>
+<div class="vl5"></div>
+<div class="vl6"></div>
 
 <h1><u>Beat Tape:</u> </h1>
 <h2>5-22</h2>
