--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h1><u>Beat Tape:</u> </h1>
 <h2>5-22</h2>
-
+<!--
 <div class = "description">
 	<p> through a monocle<br>
 		a perfect understanding<br>
@@ -57,6 +57,96 @@
 		<br>
 	</p>
 
+</div>
+-->
+
+<div class = "description">
+	<p> 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+		/////////////////////////////////////////////////////////////////////// 
+	</p>
 </div>
 
 <figure>
