Add next release date to description

--- a/index.html
+++ b/index.html
@@ -16,49 +16,6 @@
 
 <h1><u>Beat Tape:</u> </h1>
 <h2>5-22</h2>
-<!--
-<div class = "description">
-	<p> through a monocle<br>
-		a perfect understanding<br>
-		i am not moving<br> 
-		<br>
-		authenticity<br> 
-		store bought croutons no coupon<br>
-		fouton way back bends <br>
-		<br>
-		eyes glue to the scene<br>
-		microwaving inner most<br>
-		words like cheap lost use<br>
-		<br>
-		a loud man asking <br>
-		Big Head Roarke, Eli Manning <br>
-		stand for something die<br>
-		<br>
-		for nothing
-		<br>
-		<br>
-		through a monocle<br>
-		a perfect understanding<br>
-		i am not moving<br> 
-		<br>
-		authenticity<br> 
-		store bought croutons no coupon<br>
-		fouton way back bends <br>
-		<br>
-		eyes glue to the scene<br>
-		microwaving inner most<br>
-		words like cheap lost use<br>
-		<br>
-		a loud man asking <br>
-		Big Head Roarke, Eli Manning <br>
-		die for something stand<br>
-		<br>
-		for nothing
-		<br>
-	</p>
-
-</div>
--->
 
 <div class = "description">
 	<p> 
@@ -103,9 +60,10 @@
 		/////////////////////////////////////////////////////////////////////// 
 		/////////////////////////////////////////////////////////////////////// 
 		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
+		///////////////////////////////////////////////////////////////////////
+		<br> 
+		///////////////////////////////////////////////////////////New Release 6/30/////////////////////////////////////////////////////////// 
+		<br> 
 		/////////////////////////////////////////////////////////////////////// 
 		/////////////////////////////////////////////////////////////////////// 
 		/////////////////////////////////////////////////////////////////////// 
