Link archive to main-page

--- a/index.html
+++ b/index.html
@@ -1,172 +1,170 @@
 <!DOCTYPE html>
 
 <html>
+	<head>
+		<link rel = "stylesheet" type = "text/css" href = "style.css"/>
+	</head>
 
+	<body>
+		<a href="archive.html">Archives</a>
 
-<head>
-	<link rel = "stylesheet" type = "text/css" href = "style.css"/>
-</head>
+		<div class="vl"></div>
+		<div class="vl2"></div>
+		<div class="vl3"></div>
 
+		<h1> <u>Beat Tape:</u> </h1>
+		<h2>5-22</h2>
 
-<body>
+		<div class = "description">
+			<p> 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			///////////////////////////////////////////////////////////////////////
+			<br> 
+			///////////////////////////////////////////////////////////New Release 6/30/////////////////////////////////////////////////////////// 
+			<br> 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			</p>
+		</div>
 
-<div class="vl"></div>
-<div class="vl2"></div>
-<div class="vl3"></div>
+		<figure>
+		<figcaption> Track 1: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-1.wav"> </audio>
+		</figure>
 
-<h1><u>Beat Tape:</u> </h1>
-<h2>5-22</h2>
+		<figure>
+		<figcaption> Track 2: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-2.wav"> </audio>
+		</figure>
 
-<div class = "description">
-	<p> 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		///////////////////////////////////////////////////////////////////////
-		<br> 
-		///////////////////////////////////////////////////////////New Release 6/30/////////////////////////////////////////////////////////// 
-		<br> 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-		/////////////////////////////////////////////////////////////////////// 
-	</p>
-</div>
+		<figure>
+		<figcaption> Track 3: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-3.wav"> </audio>
+		</figure>
 
-<figure>
-<figcaption> Track 1: </figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-1.wav"> </audio>
-</figure>
+		<figure>
+		<figcaption> Track 4: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-4.wav"> </audio>
+		</figure>
 
-<figure>
-<figcaption> Track 2: </figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-2.wav"> </audio>
-</figure>
+		<figure>
+		<figcaption> Track 5: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-5.wav"> </audio>
+		</figure>
 
-<figure>
-<figcaption> Track 3: </figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-3.wav"> </audio>
-</figure>
+		<figure>
+		<figcaption> Track 6: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-6-1.wav"> </audio>
+		</figure>
 
-<figure>
-<figcaption> Track 4: </figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-4.wav"> </audio>
-</figure>
+		<figure>
+		<figcaption> Track 7:</figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-7-1.wav"> </audio>
+		</figure>
 
-<figure>
-<figcaption> Track 5: </figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-5.wav"> </audio>
-</figure>
+		<figure>
+		<figcaption> Track 8:</figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-8.wav"> </audio>
+		</figure>
 
-<figure>
-<figcaption> Track 6: </figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-6-1.wav"> </audio>
-</figure>
+		<figure>
+		<figcaption> Track 9:</figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-9.wav"> </audio>
+		</figure>
 
-<figure>
-<figcaption> Track 7:</figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-7-1.wav"> </audio>
-</figure>
+		<figure>
+		<figcaption> Track 10:</figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/Track-10.wav"> </audio>
+		</figure>
 
-<figure>
-<figcaption> Track 8:</figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-8.wav"> </audio>
-</figure>
-
-<figure>
-<figcaption> Track 9:</figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-9.wav"> </audio>
-</figure>
-
-<figure>
-<figcaption> Track 10:</figcaption>
-<audio controls controlsList="nodownload noplaybackrate" 
-	   src = "audioSrc/Track-10.wav"> </audio>
-</figure>
-
-</body>
+	</body>
 
 </html>
