Make all neccessary changes for 622 release

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 	</head>
 
 	<body>
-		<a href="archive.html">Archives</a>
+		<div class="title"><a href="archive.html">Archives</a></div>
+
+		<h1> <u>Beat Tape:</u> </h1>
+		<h2>6-22</h2>
+
 
 		<div class="vl"></div>
 		<div class="vl2"></div>
 		<div class="vl3"></div>
-
-		<h1> <u>Beat Tape:</u> </h1>
-		<h2>5-22</h2>
 
 		<div class = "description">
 			<p> 
@@ -59,10 +60,9 @@
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
 			///////////////////////////////////////////////////////////////////////
-			<br> 
-			///////////////////////////////////////////////////////////New Release 6/30/////////////////////////////////////////////////////////// 
-			<br> 
-			/////////////////////////////////////////////////////////////////////// 
+			///////////////////////////////////////////////////////////////////////
+			///////////////////////////////////////////////////////////////////////
+			///////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
@@ -108,61 +108,31 @@
 		<figure>
 		<figcaption> Track 1: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-1.wav"> </audio>
+			src = "audioSrc/622/622-T1.wav"> </audio>
 		</figure>
 
 		<figure>
 		<figcaption> Track 2: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-2.wav"> </audio>
+			src = "audioSrc/622/622-T2-1.wav"> </audio>
 		</figure>
 
 		<figure>
 		<figcaption> Track 3: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-3.wav"> </audio>
+			src = "audioSrc/622/622-T3.wav"> </audio>
 		</figure>
 
 		<figure>
 		<figcaption> Track 4: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-4.wav"> </audio>
+			src = "audioSrc/622/622-T4.wav"> </audio>
 		</figure>
 
 		<figure>
 		<figcaption> Track 5: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-5.wav"> </audio>
-		</figure>
-
-		<figure>
-		<figcaption> Track 6: </figcaption>
-		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-6-1.wav"> </audio>
-		</figure>
-
-		<figure>
-		<figcaption> Track 7:</figcaption>
-		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-7-1.wav"> </audio>
-		</figure>
-
-		<figure>
-		<figcaption> Track 8:</figcaption>
-		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-8.wav"> </audio>
-		</figure>
-
-		<figure>
-		<figcaption> Track 9:</figcaption>
-		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-9.wav"> </audio>
-		</figure>
-
-		<figure>
-		<figcaption> Track 10:</figcaption>
-		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/Track-10.wav"> </audio>
+			src = "audioSrc/622/622-T5.wav"> </audio>
 		</figure>
 
 	</body>
