--- a/archive.html
+++ b/archive.html
@@ -6,10 +6,11 @@
 	</head>
 
 	<body>
-		<a href="index.html">Beat Tape 5-22</a>
+		<div class="title"><a href="index.html">Beat Tape 6-22</a></div>
 
 		<h1> <u>Archives:</u> </h1>
 
+		<div class="list"><a href="522.html">5-22   -------------------------------------</a></div>
 
 		<div class="vl"></div>
 		<div class="vl2"></div>
@@ -60,9 +61,6 @@
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
 			///////////////////////////////////////////////////////////////////////
-			<br> 
-			/////////////////////////////////////////////////it seems these archives are empty/////////////////////////////////////////////// 
-			<br> 
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
@@ -103,6 +101,8 @@
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
+			/////////////////////////////////////////////////////////////////////// 
+			all our hands, red like a palm reader
 			</p>
 		</div>
 
