Add new track to index

--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
 			src = "audioSrc/622/622-T5.wav"> </audio>
 		</figure>
 
+		<figure>
+		<figcaption> Track 6: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/622/622-T6.wav"> </audio>
+		</figure>
+
 	</body>
 
 </html>
