--- a/archive.html
+++ b/archive.html
@@ -6,12 +6,13 @@
 	</head>
 
 	<body>
-		<div class="title"><a href="index.html">Beat Tape 7-22</a></div>
+		<div class="title"><a href="index.html">Beat Tape 8-22</a></div>
 
 		<h1> <u>Archives:</u> </h1>
 
 		<div class="list"><a href="522.html">5-22   -------------------------------------</a></div>
 		<div class="list"><a href="622.html">6-22   -------------------------------------</a></div>
+		<div class="list"><a href="722.html">7-22   -------------------------------------</a></div>
 
 		<div class="vl"></div>
 		<div class="vl2"></div>
@@ -103,7 +104,7 @@
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
 			/////////////////////////////////////////////////////////////////////// 
-			all our hands, red like a palm reader
+			complimentary like 245s
 			</p>
 		</div>
 
