--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="title"><a href="archive.html">Archives</a></div>
 
 		<h1> <u>Beat Tape:</u> </h1>
-		<h2>7-22</h2>
+		<h2>8-22</h2>
 
 
 		<div class="vl"></div>
@@ -108,7 +108,37 @@
 		<figure>
 		<figcaption> Track 1: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/722/722-T1.wav"> </audio>
+			src = "audioSrc/822/822-T1.wav"> </audio>
+		</figure>
+
+		<figure>
+		<figcaption> Track 2: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/822/822-T2.wav"> </audio>
+		</figure>
+
+		<figure>
+		<figcaption> Track 3: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/822/822-T3.wav"> </audio>
+		</figure>
+
+		<figure>
+		<figcaption> Track 4: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/822/822-T4.wav"> </audio>
+		</figure>
+
+		<figure>
+		<figcaption> Track 5: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/822/822-T5.wav"> </audio>
+		</figure>
+
+		<figure>
+		<figcaption> Track 6: </figcaption>
+		<audio controls controlsList="nodownload noplaybackrate" 
+			src = "audioSrc/822/822-T6.wav"> </audio>
 		</figure>
 
 	</body>
